# shelfdb

./: .dockerignore  .editorconfig  .gitignore  .lintstagedrc.js  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  README.md  docker-compose.yaml  netlify.toml  package.json  shelf.yml
.github/workflows/: build.yml  deploy-nightly.yml  test.yml
charts/shelfdb/: Chart.yaml
charts/shelfdb/templates/: _helpers.tpl  deployment.yaml  ingress.yaml
config/: Cargo.toml
config/src/: config.rs  lib.rs
dashboard/: .dockerignore  Dockerfile  gatsby-config.js  package.json
dashboard/src/: client.tsx
dashboard/src/components/Footer/: Footer.module.scss  Footer.tsx  index.ts
dashboard/src/components/Hero/: Hero.module.scss
dashboard/src/components/Layout/: index.ts
dashboard/src/components/MobileMenu/: MobileMenu.module.scss  index.ts
dashboard/src/components/SEO/: SEO.tsx
dashboard/src/components/Section/: Section.module.scss
dashboard/src/components/UndrawSection/: UndrawSection.module.scss
dashboard/src/pages/: 404.tsx  index.tsx  schemas.tsx
dashboard/src/styles/: global.scss
database/: Cargo.toml
database/src/: cache.rs  database.rs  file_store.rs  lib.rs  memory_cache.rs  shelf_base_schema.graphql  store.rs
database/src/cache/: cache.rs  cache_collection.rs  cache_schema.rs  document_result.rs  mod.rs
database/src/model/: collection.rs  document.rs  mod.rs  schema.rs
database/src/model/schema/: base_schema.graphql  mod.rs  schema.rs  validate_graphql_schema_correctness.rs
database/src/test/: mod.rs  test_cache.rs  test_store.rs
database/src/util/: extract_graphql_schema.rs  mod.rs  validate_graphql_schema_correctness.rs
docs/: .gitignore  docusaurus.config.js  gatsby-config.js  gatsby-node.js  package.json
docs/_posts/: 2020-02-17-welcome-to-jekyll.markdown
docs/src/components/Container/: Container.module.scss  Container.tsx  index.ts
docs/src/components/DocContainer/: DocContainer.module.scss  DocContainer.tsx  index.ts
docs/src/components/DocMenuSection/: DocMenuSection.module.scss  DocMenuSection.tsx  index.ts
docs/src/components/DocsLayout/: DocsLayout.module.scss  DocsLayout.tsx
docs/src/components/Footer/: Footer.module.scss  Footer.tsx
docs/src/components/Header/: Header.module.scss  Header.tsx
docs/src/components/Hero/: Hero.module.scss  Hero.tsx
docs/src/components/Layout/: Layout.module.scss  Layout.tsx
docs/src/components/MobileMenu/: MobileMenu.module.scss  MobileMenu.tsx
docs/src/components/SEO/: SEO.tsx  index.ts
docs/src/components/Section/: Section.module.scss  Section.tsx
docs/src/components/UndrawSection/: UndrawSection.module.scss  UndrawSection.tsx  index.ts
docs/src/css/: custom.css
docs/src/docs/: installation.mdx  welcome.mdx
docs/src/pages/: 404.tsx  index.tsx
docs/src/partials/: _variables.scss
docs/src/styles/: global.scss
file_store/: Cargo.toml
file_store/src/: file_store.rs  lib.rs
file_store/src/util/: compute_hash_sum.rs  extract_file_name.rs  is_collection_file.rs  mod.rs  write_compressed_file.rs
helm/: values.yaml
helm/templates/: NOTES.txt  service.yaml  serviceaccount.yaml
helm/templates/tests/: test-connection.yaml
memory_cache/: Cargo.toml
memory_cache/benches/: index_benches.rs
memory_cache/src/: lib.rs  memory_cache.rs  memory_cache_collection.rs  memory_cache_schema.rs  memory_document_result.rs
server/: Cargo.toml
server/src/: context.rs  lib.rs  server.rs
server/src/admin/: context.rs  mod.rs  mutation.rs  query.rs  schema.rs  schema_input.rs  schema_type.rs  start_admin_server.rs
server/src/client/: build_root_node_from_schemas.rs  collection.rs  connection.rs  edge.rs  mod.rs  mutation.rs  mutation_fields.rs  node.rs  page_info.rs  query.rs  query_field.rs  schema.rs  start_client_server.rs
server/src/client/query_field/: field.rs  fields.rs  from_str.rs  into_field.rs  mod.rs
server/src/util/: graphql_get.rs  graphql_post.rs  make_sync.rs  mod.rs  parse_graphql_response.rs  playground.rs
shelf/: Cargo.toml
shelf/src/: main.rs  settings.rs
shelf/src/collection/: collection.rs  mod.rs  schema.rs
shelf/src/database/: cache.rs  database.rs  file_store.rs  memory_cache.rs  mod.rs  store.rs
shelf/src/server/: mod.rs  server.rs
shelf/src/server/admin/: mutation.rs  query.rs  schema.rs  schema_type.rs  start_admin_server.rs
shelf/src/server/client/: context.rs  mutation.rs  query.rs  schema.rs  start_client_server.rs
shelf/src/server/util/: graphql_get.rs  graphql_post.rs  make_sync.rs  playground.rs
