[package]
name = "shelf_config"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
edition = "2018"
repository = "https://github.com/Joatin/shelf"
description = "The GraphQL database. Makes storing data easy!"
publish = false

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
failure = "0.1.6"
serde = "1.0.104"
serde_derive = "1.0.104"
config = "0.10.1"
colored = "1.9.2"
