[package]
name = "shelf_database"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
edition = "2018"
repository = "https://github.com/Joatin/shelf"
description = "The GraphQL database. Makes storing data easy!"
publish = false

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
failure = "0.1.6"
futures = "0.3.1"
tokio = {version = "0.2.9", features = ["full"]}
sys-info = "0.5.8"
pretty-bytes = "0.2.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
uuid = {version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.10", features = ["serde"] }
colored = "1.9.2"
graphql-parser = "0.2.3"
owning_ref = "0.4.0"

shelf_config = { path = "../config" }

[dev-dependencies]
sloggers = "0.3.5"
