[package]
name = "shelf_file_store"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
edition = "2018"
repository = "https://github.com/Joatin/shelf"
description = "The GraphQL database. Makes storing data easy!"
publish = false

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
failure = "0.1.6"
futures = "0.3.1"
sys-info = "0.5.8"
pretty-bytes = "0.2.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
colored = "1.9.2"
tokio = {version = "0.2.9", features = ["full"]}
flate2 = "1.0.13"

shelf_config = { path = "../config" }
shelf_database = { path = "../database" }
