[package]
name = "shelf"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
edition = "2018"
repository = "https://github.com/Joatin/shelf"
license-file = "../LICENSE"
description = "The GraphQL database. Makes storing data easy!"
publish = false

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
sloggers = "0.3.5"
hyper = "0.13.1"
juniper = "0.14.2"
failure = "0.1.6"
futures = "0.3.1"
tokio = {version = "0.2.9", features = ["full"]}
sys-info = "0.5.8"
pretty-bytes = "0.2.2"
serde = "1.0.104"
serde_json = "1.0.44"
serde_derive = "1.0.104"
uuid = {version = "0.7", features = ["serde", "v4"] }
chrono = { version = "0.4.10", features = ["serde"] }
graceful = "0.1.1"
colored = "1.9.2"
human-panic = "1.0.1"
graphql-parser = "0.2.3"

shelf_config = { path = "../config" }
shelf_database = { path = "../database" }
shelf_server = { path = "../server" }
shelf_memory_cache= { path = "../memory_cache" }
shelf_file_store = { path = "../file_store" }
