[package]
name = "shelf"
version = "0.1.0"
authors = ["Joatin Granlund <granlundjoatin@icloud.com>"]
edition = "2018"
repository = "https://github.com/Joatin/shelf"
license-file = "../LICENSE"
description = "The GraphQL database. Makes storing data easy!"
publish = false

[dependencies]
slog = { version = "2.5.2", features = ["max_level_trace"] }
sloggers = "0.3.5"
failure = "0.1.6"
futures = "0.3.1"
tokio = {version = "0.2.9", features = ["full"]}
sys-info = "0.5.8"
graceful = "0.1.1"
colored = "1.9.2"
human-panic = "1.0.1"

shelf_config = { path = "../config" }
shelf_database = { path = "../database" }
shelf_server = { path = "../server" }
shelf_memory_cache= { path = "../memory_cache" }
shelf_file_store = { path = "../file_store" }
